// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsDataSource query returns data for valid data output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "id",
        "type": "string",
        "values": [
          "000007fb-aa87-4ab9-9757-6568e7893c33",
        ],
      },
      {
        "name": "programName",
        "type": "string",
        "values": [
          "My Program Name",
        ],
      },
      {
        "name": "serialNumber",
        "type": "string",
        "values": [
          "123-456",
        ],
      },
      {
        "name": "systemId",
        "type": "string",
        "values": [
          "20FRS0MQ67--SN-R90N9L4N--MAC-54-AA-75-CE-B7-FE",
        ],
      },
      {
        "name": "statusTypeSummary",
        "type": "string",
        "values": [
          "{"LOOPING":0,"SKIPPED":0,"CUSTOM":0,"DONE":0,"PASSED":1,"FAILED":0,"RUNNING":0,"WAITING":0,"TERMINATED":0,"ERRORED":0,"TIMED_OUT":0}",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`ResultsDataSource query returns data for valid data-output-type query 1`] = `
[
  {
    "fields": [
      {
        "name": "id",
        "type": "string",
        "values": [
          "000007fb-aa87-4ab9-9757-6568e7893c33",
        ],
      },
      {
        "name": "programName",
        "type": "string",
        "values": [
          "My Program Name",
        ],
      },
      {
        "name": "serialNumber",
        "type": "string",
        "values": [
          "123-456",
        ],
      },
      {
        "name": "systemId",
        "type": "string",
        "values": [
          "20FRS0MQ67--SN-R90N9L4N--MAC-54-AA-75-CE-B7-FE",
        ],
      },
      {
        "name": "statusTypeSummary",
        "type": "string",
        "values": [
          "{"LOOPING":0,"SKIPPED":0,"CUSTOM":0,"DONE":0,"PASSED":1,"FAILED":0,"RUNNING":0,"WAITING":0,"TERMINATED":0,"ERRORED":0,"TIMED_OUT":0}",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`ResultsDataSource query returns no data when Query Products returns no data 1`] = `[]`;

exports[`ResultsDataSource query returns no data when QueryResults API returns empty array 1`] = `[]`;

exports[`ResultsDataSource query returns total count for valid total count output type queries 1`] = `
[
  {
    "fields": [
      {
        "name": "Total count",
        "values": [
          1,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`ResultsDataSource query should convert properties to Grafana fields 1`] = `
[
  {
    "name": "id",
    "type": "string",
    "values": [
      "000007fb-aa87-4ab9-9757-6568e7893c33",
    ],
  },
  {
    "name": "programName",
    "type": "string",
    "values": [
      "My Program Name",
    ],
  },
  {
    "name": "serialNumber",
    "type": "string",
    "values": [
      "123-456",
    ],
  },
  {
    "name": "systemId",
    "type": "string",
    "values": [
      "20FRS0MQ67--SN-R90N9L4N--MAC-54-AA-75-CE-B7-FE",
    ],
  },
  {
    "name": "properties",
    "type": "string",
    "values": [
      "{"Mass":"","StartTime":"10-19-2022","MaxVoltage":"4.02","MetrackID1":"None"}",
    ],
  },
  {
    "name": "status",
    "type": "string",
    "values": [
      "PASSED",
    ],
  },
  {
    "name": "statusTypeSummary",
    "type": "string",
    "values": [
      "{"LOOPING":0,"SKIPPED":0,"CUSTOM":0,"DONE":0,"PASSED":1,"FAILED":0,"RUNNING":0,"WAITING":0,"TERMINATED":0,"ERRORED":0,"TIMED_OUT":0}",
    ],
  },
]
`;

exports[`ResultsDataSource queryResults returns data when there are valid queries 1`] = `
{
  "continuationToken": "",
  "results": [
    {
      "dataTableIds": [
        "62333547f7521f2f2f4675e5",
      ],
      "fileIds": [
        "5e30934193c608046851acb2",
      ],
      "hostName": "My-Host",
      "id": "000007fb-aa87-4ab9-9757-6568e7893c33",
      "keywords": [
        "keyword1",
        "keyword2",
      ],
      "operator": "admin",
      "partNumber": "cRIO-9050",
      "programName": "My Program Name",
      "properties": {
        "Mass": "",
        "MaxVoltage": "4.02",
        "MetrackID1": "None",
        "StartTime": "10-19-2022",
      },
      "serialNumber": "123-456",
      "startedAt": "2018-05-07T18:58:05.219692Z",
      "status": {
        "statusName": "Passed",
        "statusType": "PASSED",
      },
      "statusTypeSummary": {
        "CUSTOM": 0,
        "DONE": 0,
        "ERRORED": 0,
        "FAILED": 0,
        "LOOPING": 0,
        "PASSED": 1,
        "RUNNING": 0,
        "SKIPPED": 0,
        "TERMINATED": 0,
        "TIMED_OUT": 0,
        "WAITING": 0,
      },
      "systemId": "20FRS0MQ67--SN-R90N9L4N--MAC-54-AA-75-CE-B7-FE",
      "totalTimeInSeconds": 29.9,
      "updatedAt": "2023-10-23T22:30:03.833396Z",
      "workspace": "846e297h-a007-47ac-9fc2-fac07eab240e",
    },
  ],
  "totalCount": 1,
}
`;
